# CoinFlow

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  QUICK_START.md  README.md  ROADMAP.md  USAGE.md  check_python.ps1  coinflow.py  docker-compose.yml  docker-run.bat  docker-run.sh  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
coinflow/: __init__.py  bot.py  config.py  localization.py
coinflow/database/: __init__.py  models.py  repository.py
coinflow/handlers/: __init__.py  admin_handler.py  ai_handler.py  analytics_handler.py  callbacks.py  commands.py  cs2_handler.py  dashboard_handler.py  export_handler.py  messages.py  news_handler.py  portfolio_handler.py  report_handler.py  stocks_handler.py  trading_handler.py
coinflow/services/: __init__.py  ai_service.py  alerts.py  analytics_service.py  calculator.py  charts.py  converter.py  cs2_market_service.py  export_service.py  news_service.py  notion_service.py  portfolio.py  prediction.py  rebalance_service.py  report_service.py  sheets_service.py  smart_alerts.py  speech_service.py  stock_service.py  trading_signals.py  voice_service.py
coinflow/utils/: __init__.py  cache.py  logger.py  metrics.py  safe_calculator.py
docs/: API_REFERENCE.md  BUGFIX_REPORT.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  DOCKER_GUIDE.md  INSTALLATION.md  MIGRATION_GUIDE.md  NEW_FEATURES.md  PROJECT_STATUS.md  QWEN3_INTEGRATION_GUIDE.md  README.md  STOCKS_INTEGRATION.md  TROUBLESHOOTING.md  V3.1_RELEASE_NOTES.md  VOICE_SETUP.md  apis.md
webapp/: __init__.py  main.py
webapp/templates/: dashboard.html
