[tool.poetry]
name = "coinflow"
version = "2.7.0"
description = "Advanced Telegram Bot for currency conversion and cryptocurrency analysis"
authors = ["bobberdolle1 <kirillkrovyakov@yandex.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32"
python-telegram-bot = "^22.5"
python-dotenv = "^1.0"
matplotlib = "^3.9"
yfinance = "^0.2"
numpy = "^2.0"
statsmodels = "^0.14"
scikit-learn = "^1.5"
apscheduler = "^3.10"
bestchange-api = "^3.1"
sqlalchemy = "^2.0"
aiohttp = "^3.9"
feedparser = "^6.0"
google-auth = {version = "^2.23", optional = true}
google-auth-oauthlib = {version = "^1.1", optional = true}
google-api-python-client = {version = "^2.100", optional = true}
notion-client = {version = "^2.2", optional = true}
SpeechRecognition = {version = "^3.10", optional = true}
pydub = {version = "^0.25", optional = true}
fastapi = {version = "^0.104", optional = true}
uvicorn = {version = "^0.24", optional = true}
jinja2 = {version = "^3.1", optional = true}
python-multipart = {version = "^0.0.6", optional = true}

[tool.poetry.extras]
sheets = ["google-auth", "google-auth-oauthlib", "google-api-python-client"]
notion = ["notion-client"]
voice = ["SpeechRecognition", "pydub"]
webapp = ["fastapi", "uvicorn", "jinja2", "python-multipart"]
all = ["google-auth", "google-auth-oauthlib", "google-api-python-client", "notion-client", "SpeechRecognition", "pydub", "fastapi", "uvicorn", "jinja2", "python-multipart"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"